force-app/main/default/objects/JBCXM__GSNPSTextAnalytics__c/JBCXM__GSNPSTextAnalytics__c.object-meta.xml
<CustomObject>
    <label>NPS Text Analytics</label>
    <nameField>
        <displayFormat>STA-{000}</displayFormat>
        <label>NPS Text Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Text Analytics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>