force-app/main/default/objects/JBCXM__GSNPSTextAnalytics__c/fields/JBCXM__Aspect__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Aspect__c</fullName>
    <label>Aspect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>