force-app/main/default/objects/JBCXM__GSNPSTextAnalytics__c/fields/JBCXM__AspectGroup__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AspectGroup__c</fullName>
    <label>Aspect Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>