force-app/main/default/objects/JBCXM__GSNPSTextAnalytics__c/fields/JBCXM__NPSSurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPSSurveyResponse__c</fullName>
    <label>NPSSurvey Response</label>
    <referenceTo>JBCXM__SurveyResponse__c</referenceTo>
    <relationshipLabel>NPS Text Analytics</relationshipLabel>
    <relationshipName>NPS_Text_Analytics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>