force-app/main/default/objects/JBCXM__GSNPSTextAnalytics__c/fields/JBCXM__RunDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RunDate__c</fullName>
    <label>RunDate</label>
    <type>Date</type>
</CustomField>